Third Activity - firestore & ListView: dulsik2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.teamproject">
 
     <application
@@ -17,6 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Filter" android:theme="@style/Theme.MyDialog"/> <!-- 팝업창을 띄우는 Theme로 설정 -->
+        <activity
+            android:name=".Selected"
+            tools:ignore="DuplicateActivity" />
     </application>
 
 </manifest>
