Add Selecting ListView, Alert, ToastMessage & Modify File name: dulsik2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <activity android:name=".Filter" android:theme="@style/Theme.MyDialog"/> <!-- 팝업창을 띄우는 Theme로 설정 -->
         <activity
-            android:name=".Selected"
+            android:name=".FilteredList"
             tools:ignore="DuplicateActivity" />
     </application>
 
